# emu-automaton

./: .gitignore  Automaton.hpp  AutomatonApp.hpp  CMakeLists.txt  Cellular.hpp  Debug.hpp  File.hpp  Filestream.hpp  InterfaceApp.hpp  Ising.hpp  LICENSE  Life106Decoder.hpp  Linear.hpp  Logger.hpp  PlainDecoder.hpp  Probabilistic.hpp  README.md  RLEDecoder.hpp  Renderer.hpp  Shader.hpp  ShaderAttrib.hpp  ShaderProgram.hpp  ShaderUniform.hpp  String.hpp  Texture.hpp  Tuple.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp  cell.hpp  cellular.hpp  linear.hpp  main.cpp
include/: opengl_config.h
resources/: Info.plist  automaton.desktop  automaton.icns
shaders/: aut4.frag  aut4.vert  automaton.frag  bsc.comp  conway.comp  soup.comp
tools/: build_appimage
